<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Mileage</string>
	<string name="app_version">1.1</string>
	<string name="price_per_gallon">Price per gallon</string>
	<string name="gallons">Gallons of Fuel</string>
	<string name="odometer">Odometer</string>
	<string name="custom_date">Change Date</string>
	<string name="add_fillup">Record Fill-up</string>
	<string name="fillup">Fill Up</string>
	<string name="fillup_history">History</string>
	<string name="graphs">Graphs</string>
	<string name="save_changes">Save Changes</string>
	<string name="delete">Delete</string>
	<string name="edit_fillup">Edit Fill-up</string>
	<string name="cancel_changes">Cancel Changes</string>
	<string name="confirm_delete">Are you sure you want to delete this?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">OK</string>
	<string name="statistics">Statistics</string>
	<string name="history_description">gal @ $</string>
	<string name="close">Close</string>
	<string name="about">About</string>
	<string name="author">Evan Charlton</string>
	<string name="contact">mileage@evancharlton.com</string>
	<string name="website">http://evancharlton.com/projects/mileage</string>
	<string name="today">Today</string>
	<string name="comment">Comment (optional)</string>
	<string name="make_default">Make this vehicle the default</string>
	<string name="gallons_abbr">gal</string>
	
	<string name="history_text1">:</string>
	<string name="history_text2">gallons @ $</string>
	
	<string name="vehicles">Vehicles</string>
	<string name="vehicle_make">Make</string>
	<string name="vehicle_model">Model</string>
	<string name="vehicle_year">Year</string>
	<string name="vehicle_title">Title (e.g. Mom's car)</string>
	<string name="vehicle_add">Add Vehicle</string>
	<string name="vehicle_save">Save Vehicle</string>
	
	<string name="stats_default">--</string>
	<string name="stats_distance_running">Distance between last fill-ups:</string>
	<string name="stats_distance_average">Average distance between fill-ups:</string>
	<string name="stats_distance_maximum">Maximum distance between fill-ups:</string>
	<string name="stats_distance_minimum">Minimum distance between fill-ups:</string>
	<string name="stats_economy_running">Fuel economy for last fill-up:</string>
	<string name="stats_economy_average">Average fuel economy:</string>
	<string name="stats_economy_minimum">Minimum fuel economy:</string>
	<string name="stats_economy_maximum">Maximum fuel economy:</string>
	<string name="stats_price_running">Total cost of fuel:</string>
	<string name="stats_price_thirty_days">Cost of fuel in the last 30 days:</string>
	<string name="stats_price_latest">Last price per gallon:</string>
	<string name="stats_price_average">Average price per gallon:</string>
	<string name="stats_price_minimum">Lowest price per gallon:</string>
	<string name="stats_price_maximum">Highest price per gallon:</string>
	<string name="stats_amount_running">Total gallons of fuel:</string>
	<string name="stats_amount_average">Average gallons of fuel per fill-up:</string>
	<string name="stats_amount_minimum">Minimum gallons of fuel per fill-up:</string>
	<string name="stats_amount_maximum">Maximum gallons of fuel per fill-up:</string>
	<string name="stats_amount_average_cost">Average cost per fill-up:</string>
	<string name="stats_amount_minimum_cost">Minimum cost per fill-up:</string>
	<string name="stats_amount_maximum_cost">Maximum cost per fill-up:</string>
	
	<string name="import_export">Import / Export</string>
	<string name="export_header">Export</string>	
	<string name="error_exporting_data">Error while exporting</string>
	<string name="export_finished">Export completed successfully!</string>
	<string name="export_finished_msg">The exported file is on your SD card in the file:</string>
	<string name="exporting">Exporting database</string>
	<string name="exporting_title">Exporting...</string>
	<string name="importing_title">Importing...</string>
	<string name="import_header">Import</string>
	<string name="import_db">DB</string>
	<string name="import_sql">SQL</string>
	<string name="import_csv">CSV</string>
	<string name="import_done">Finished importing!</string>
	<string name="import_done_msg">The data in the following file has been imported:</string>
	<string name="error_importing_data">Error while importing</string>
	<string name="sqlite">SQLite DB</string>
	<string name="sql_file">SQL</string>
	<string name="csv_file">CSV</string>
	
	<string name="error">Error!</string>
	<string name="error_cost">Invalid number format for price of fuel.</string>
	<string name="error_amount">Invalid number format for amount of fuel.</string>
	<string name="error_mileage">Invalid number format for mileage reading.</string>
	<string name="error_year">Year can not be blank!</string>
	<string name="error_make">Make can not be blank!</string>
	<string name="error_model">Model can not be blank!</string>
	<string name="error_title">Title can not be blank!</string>
	
	<string name="help">Help</string>
	<string name="help_title_import_export">Import/Export Help</string>
	<string name="help_import_db">When importing SQLite databases it is extremely important to know that it will overwrite your current database.
	All local changes will be lost forever. The file that will be imported needs to be on your SD card as "mileage.db"</string>
	<string name="help_import_csv">Importing comma-separated value (CSV) files is useful for providing spreadsheet integration. Note that the format
	is pretty specific; if you are not sure of the format, it's highly recommended that you export a CSV, open it in Excel, insert your values, and
	then import the resulting spreadsheet. Note that the input file needs to be on your SD card as "mileage.csv"</string>
	<string name="help_import_sql">Importing SQL is highly dependent on the database schema. If you do not know what you're doing with this, it is
	recommended you use another option. The file that is imported needs to be on your SD card as "mileage.sql"</string>
	<string name="help_export_db">Exporting the SQLite database will create a direct copy of your current SQLite database and place the resulting
	copy on your SD card in the file "mileage.db"</string>
	<string name="help_export_csv">Exporting a comma-separated value (CSV) file will export your current database into a "mileage.csv" file on
	your SD card. This file can then be used in Excel or any other spreadsheet editor.</string>
	<string name="help_export_sql">Exporting your database as SQL will create a "mileage.sql" file on your SD card. These SQL commands can then
	be imported into any other database engine of choice, provided that the schemas match. Note that the table-creation SQL is omitted; it is up
	to the end user to create the necessary tables.</string>
	
	<string name="help_title_vehicles">Vehicles Help</string>
	<string name="help_vehicles">From this screen, you can add a new vehicle, or select an existing vehicle to edit.</string>
	
	<string name="help_title_vehicle_edit">Editing Vehicle Help</string>
	<string name="help_vehicle_edit">From here, you can change attributes about an existing vehicle. If you decide
	to not save your changes, simply select Cancel Changes to undo the changes. Note that there must always be at least one vehicle, so you
	can not delete the last vehicle. If you have multiple vehicles, you can choose to set this vehicle as default, so that it is always first
	in the list.</string>
	
	<string name="help_title_vehicle_add">Adding Vehicle Help</string>
	<string name="help_vehicle_add">This allows you to add new vehicles to your database. This may be helpful if you drive two vehicles, or
	multiple vehicles share a database. You can optionally set this vehicle to be the default vehicle.</string>
	
	<string name="help_title_fillup_new">Recording Fill-Up Help</string>
	<string name="help_fillup_new">This allows you to add a new fill-up into the database. Note that you can select any date you wish, so you can
	enter past fill-ups. Alternatively, you can import old fill-ups from a spreadsheet or database; go to History, then to Import/Export for more
	details. You can fill in an optional comment.</string>
	
	<string name="help_title_history">History Help</string>
	<string name="help_history">The history browser lets you view a list of past fill-ups, of all vehicles. Once a fill-up is selected, you can edit or
	delete individual entries. Additionally, you can import or export data.</string>
	
	<string name="help_title_fillup_edit">Editing Fill-Up Help</string>
	<string name="help_fillup_edit">From here, you can edit a previously-recorded fill-up, or delete it altogether. Select Cancel Changes to undo
	any changes you have made and return to the history browser. You can fill in an optional comment, if you want to.</string>
</resources>
