<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<EditText
		android:id="@+id/price_edit"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/price_per_gallon"
	/>
	<EditText
		android:id="@+id/amount_edit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/gallons"
	/>
	<EditText
		android:id="@+id/odometer_edit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/odometer"
	/>
	<Button
		android:id="@+id/change_date_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/custom_date"
	/>
	<Spinner
		android:id="@+id/vehicle_spinner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
	<Button
		android:id="@+id/add_fillup_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/add_fillup"
	/>
</LinearLayout>