<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<EditText
			android:id="@+id/vehicle_year"
			android:layout_width="0dip"
	   		android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/vehicle_year"
		/>
		<EditText
			android:id="@+id/vehicle_make"
			android:layout_width="0dip"
	   		android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/vehicle_make"
		/>
	</LinearLayout>
	<EditText
		android:id="@+id/vehicle_model"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/vehicle_model"
	/>
	<EditText
		android:id="@+id/vehicle_title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/vehicle_title"
	/>
	<Button
		android:id="@+id/vehicle_add"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/vehicle_add"
	/>
</LinearLayout>