<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<Spinner
		android:id="@+id/stats_vehicle_spinner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<!-- distance between refills -->
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>
				<TextView
					style="@style/LabelText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_distance_running"
				/>
				<TextView
					android:id="@+id/stats_distance_running"
					style="@style/StatisticText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_default"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>
				<TextView
					style="@style/LabelText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_distance_average"
				/>
				<TextView
					android:id="@+id/stats_distance_average"
					style="@style/StatisticText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_default"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>
				<TextView
					style="@style/LabelText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_distance_maximum"
				/>
				<TextView
					android:id="@+id/stats_distance_maximum"
					style="@style/StatisticText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_default"
				/>
			</LinearLayout>
			<!-- fuel economy -->
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>
				<TextView
					style="@style/LabelText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_economy_running"
				/>
				<TextView
					android:id="@+id/stats_economy_running"
					style="@style/StatisticText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_default"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>
				<TextView
					style="@style/LabelText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_economy_average"
				/>
				<TextView
					android:id="@+id/stats_economy_average"
					style="@style/StatisticText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_default"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>
				<TextView
					style="@style/LabelText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_economy_maximum"
				/>
				<TextView
					android:id="@+id/stats_economy_maximum"
					style="@style/StatisticText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_default"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>
				<TextView
					style="@style/LabelText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_economy_minimum"
				/>
				<TextView
					android:id="@+id/stats_economy_minimum"
					style="@style/StatisticText"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:text="@string/stats_default"
				/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>